target/generated-sources/antlr4/delphi/delphiParser.java
// Generated from delphi/delphi.g4 by ANTLR 4.13.1
package delphi;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ARRAY=2, ABSTRACT=3, AS=4, AT=5, BEGIN=6, BOOLEAN=7, CASE=8, CHAR=9, 
		CHR=10, CLASS=11, CONST=12, CONSTRUCTOR=13, CREATE=14, DESTRUCTOR=15, 
		DIV=16, DO=17, DOWNTO=18, ELSE=19, END=20, EXCEPT=21, FALSE=22, FILE=23, 
		FINALLY=24, FOR=25, FREE=26, FUNCTION=27, GOTO=28, IF=29, IMPLEMENTATION=30, 
		IN=31, INHERITED=32, INTEGER=33, INTERFACE=34, IS=35, LABEL=36, MOD=37, 
		NEW=38, NIL=39, NOT=40, OF=41, OR=42, OVERRIDE=43, PACKED=44, POINTER=45, 
		PRIVATE=46, PROCEDURE=47, PROGRAM=48, PROTECTED=49, PUBLIC=50, PUBLISHED=51, 
		REAL=52, RECORD=53, REPEAT=54, RESULT=55, SELF=56, SET=57, SHL=58, SHR=59, 
		STRING=60, THEN=61, TO=62, TRUE=63, TRY=64, TYPE=65, UNIT=66, UNTIL=67, 
		USES=68, VAR=69, VIRTUAL=70, WHILE=71, WITH=72, WRITELN=73, WRITE=74, 
		XOR=75, ASSIGN=76, PLUS=77, MINUS=78, STAR=79, SLASH=80, EQUALS=81, NOT_EQUALS=82, 
		LT=83, LE=84, GE=85, GT=86, LPAREN=87, RPAREN=88, LBRACKET=89, RBRACKET=90, 
		COLON=91, SEMI=92, COMMA=93, DOT=94, DOTDOT=95, NUM_INT=96, NUM_REAL=97, 
		STRING_LITERAL=98, IDENT=99, WS=100, COMMENT1=101, COMMENT2=102, COMMENT3=103, 
		DESTROY=104;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_usesClause = 2, RULE_block = 3, 
		RULE_declarationPart = 4, RULE_classType = 5, RULE_classBody = 6, RULE_classSection = 7, 
		RULE_visibilitySpecifier = 8, RULE_classMemberList = 9, RULE_classMember = 10, 
		RULE_fieldDeclaration = 11, RULE_methodDeclaration = 12, RULE_methodDirective = 13, 
		RULE_constructorDeclaration = 14, RULE_destructorDeclaration = 15, RULE_labelDeclaration = 16, 
		RULE_label = 17, RULE_constantDefinitionPart = 18, RULE_constantDefinition = 19, 
		RULE_constant = 20, RULE_constantChr = 21, RULE_typeDefinitionPart = 22, 
		RULE_typeDefinition = 23, RULE_interfaceType = 24, RULE_interfaceBody = 25, 
		RULE_interfaceMember = 26, RULE_type_ = 27, RULE_simpleType = 28, RULE_subrangeType = 29, 
		RULE_enumeratedType = 30, RULE_structuredType = 31, RULE_unpackedStructuredType = 32, 
		RULE_arrayType = 33, RULE_typeList = 34, RULE_indexType = 35, RULE_setType = 36, 
		RULE_baseType = 37, RULE_fileType = 38, RULE_recordType = 39, RULE_fieldList = 40, 
		RULE_fixedPart = 41, RULE_recordSection = 42, RULE_variantPart = 43, RULE_tag = 44, 
		RULE_variant = 45, RULE_pointerType = 46, RULE_variableDeclarationPart = 47, 
		RULE_variableDeclaration = 48, RULE_procedureAndFunctionDeclarationPart = 49, 
		RULE_procedureOrFunctionDeclaration = 50, RULE_procedureDeclaration = 51, 
		RULE_functionDeclaration = 52, RULE_constructorImplementation = 53, RULE_destructorImplementation = 54, 
		RULE_methodImplementation = 55, RULE_formalParameterList = 56, RULE_formalParameterSection = 57, 
		RULE_parameterGroup = 58, RULE_identifierList = 59, RULE_constList = 60, 
		RULE_compoundStatement = 61, RULE_statements = 62, RULE_statement = 63, 
		RULE_simpleStatement = 64, RULE_assignmentStatement = 65, RULE_variable = 66, 
		RULE_procedureStatement = 67, RULE_gotoStatement = 68, RULE_emptyStatement_ = 69, 
		RULE_structuredStatement = 70, RULE_conditionalStatement = 71, RULE_ifStatement = 72, 
		RULE_caseStatement = 73, RULE_caseListElement = 74, RULE_repetetiveStatement = 75, 
		RULE_whileStatement = 76, RULE_repeatStatement = 77, RULE_forStatement = 78, 
		RULE_forList = 79, RULE_initialValue = 80, RULE_finalValue = 81, RULE_withStatement = 82, 
		RULE_recordVariableList = 83, RULE_tryStatement = 84, RULE_exceptBlock = 85, 
		RULE_finallyBlock = 86, RULE_parameterList = 87, RULE_actualParameter = 88, 
		RULE_expression = 89, RULE_relationalOperator = 90, RULE_simpleExpression = 91, 
		RULE_additiveOperator = 92, RULE_term = 93, RULE_multiplicativeOperator = 94, 
		RULE_signedFactor = 95, RULE_factor = 96, RULE_objectCreation = 97, RULE_bool_ = 98, 
		RULE_functionDesignator = 99, RULE_unsignedConstant = 100, RULE_set_ = 101, 
		RULE_element = 102, RULE_typeIdentifier = 103, RULE_unsignedNumber = 104, 
		RULE_unsignedInteger = 105, RULE_unsignedReal = 106, RULE_sign = 107, 
		RULE_bool = 108, RULE_string = 109, RULE_identifier = 110;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "usesClause", "block", "declarationPart", 
			"classType", "classBody", "classSection", "visibilitySpecifier", "classMemberList", 
			"classMember", "fieldDeclaration", "methodDeclaration", "methodDirective", 
			"constructorDeclaration", "destructorDeclaration", "labelDeclaration", 
			"label", "constantDefinitionPart", "constantDefinition", "constant", 
			"constantChr", "typeDefinitionPart", "typeDefinition", "interfaceType", 
			"interfaceBody", "interfaceMember", "type_", "simpleType", "subrangeType", 
			"enumeratedType", "structuredType", "unpackedStructuredType", "arrayType", 
			"typeList", "indexType", "setType", "baseType", "fileType", "recordType", 
			"fieldList", "fixedPart", "recordSection", "variantPart", "tag", "variant", 
			"pointerType", "variableDeclarationPart", "variableDeclaration", "procedureAndFunctionDeclarationPart", 
			"procedureOrFunctionDeclaration", "procedureDeclaration", "functionDeclaration", 
			"constructorImplementation", "destructorImplementation", "methodImplementation", 
			"formalParameterList", "formalParameterSection", "parameterGroup", "identifierList", 
			"constList", "compoundStatement", "statements", "statement", "simpleStatement", 
			"assignmentStatement", "variable", "procedureStatement", "gotoStatement", 
			"emptyStatement_", "structuredStatement", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList", "tryStatement", "exceptBlock", 
			"finallyBlock", "parameterList", "actualParameter", "expression", "relationalOperator", 
			"simpleExpression", "additiveOperator", "term", "multiplicativeOperator", 
			"signedFactor", "factor", "objectCreation", "bool_", "functionDesignator", 
			"unsignedConstant", "set_", "element", "typeIdentifier", "unsignedNumber", 
			"unsignedInteger", "unsignedReal", "sign", "bool", "string", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'@'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'^'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "':='", "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", 
			"'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "']'", "':'", "';'", 
			"','", "'.'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "ARRAY", "ABSTRACT", "AS", "AT", "BEGIN", "BOOLEAN", "CASE", 
			"CHAR", "CHR", "CLASS", "CONST", "CONSTRUCTOR", "CREATE", "DESTRUCTOR", 
			"DIV", "DO", "DOWNTO", "ELSE", "END", "EXCEPT", "FALSE", "FILE", "FINALLY", 
			"FOR", "FREE", "FUNCTION", "GOTO", "IF", "IMPLEMENTATION", "IN", "INHERITED", 
			"INTEGER", "INTERFACE", "IS", "LABEL", "MOD", "NEW", "NIL", "NOT", "OF", 
			"OR", "OVERRIDE", "PACKED", "POINTER", "PRIVATE", "PROCEDURE", "PROGRAM", 
			"PROTECTED", "PUBLIC", "PUBLISHED", "REAL", "RECORD", "REPEAT", "RESULT", 
			"SELF", "SET", "SHL", "SHR", "STRING", "THEN", "TO", "TRUE", "TRY", "TYPE", 
			"UNIT", "UNTIL", "USES", "VAR", "VIRTUAL", "WHILE", "WITH", "WRITELN", 
			"WRITE", "XOR", "ASSIGN", "PLUS", "MINUS", "STAR", "SLASH", "EQUALS", 
			"NOT_EQUALS", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "COLON", "SEMI", "COMMA", "DOT", "DOTDOT", "NUM_INT", "NUM_REAL", 
			"STRING_LITERAL", "IDENT", "WS", "COMMENT1", "COMMENT2", "COMMENT3", 
			"DESTROY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public UsesClauseContext usesClause() {
			return getRuleContext(UsesClauseContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			programHeading();
			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USES) {
				{
				setState(223);
				usesClause();
				}
			}

			setState(226);
			block();
			setState(227);
			match(DOT);
			setState(228);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			match(PROGRAM);
			setState(231);
			identifier();
			setState(236);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(232);
				match(LPAREN);
				setState(233);
				identifierList();
				setState(234);
				match(RPAREN);
				}
			}

			setState(238);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsesClauseContext extends ParserRuleContext {
		public TerminalNode USES() { return getToken(delphiParser.USES, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public UsesClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usesClause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitUsesClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsesClauseContext usesClause() throws RecognitionException {
		UsesClauseContext _localctx = new UsesClauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_usesClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240);
			match(USES);
			setState(241);
			identifierList();
			setState(242);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<DeclarationPartContext> declarationPart() {
			return getRuleContexts(DeclarationPartContext.class);
		}
		public DeclarationPartContext declarationPart(int i) {
			return getRuleContext(DeclarationPartContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(247);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & 153122421707145227L) != 0)) {
				{
				{
				setState(244);
				declarationPart();
				}
				}
				setState(249);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(250);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
